--- a/f756_rtos_dispacher_RT.ioc
+++ b/f756_rtos_dispacher_RT.ioc
@@ -5,6 +5,7 @@ CAD.provider=
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
+GPIO.groupedBy=Show All
 KeepUserPlacement=false
 Mcu.CPN=STM32F756ZGT6
 Mcu.Family=STM32F7
@@ -20,39 +21,45 @@ Mcu.Name=STM32F756ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG6
-Mcu.Pin17=PG7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PC3
+Mcu.Pin11=PA1
+Mcu.Pin12=PA2
+Mcu.Pin13=PA3
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PC5
+Mcu.Pin17=PB0
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PG11
-Mcu.Pin26=PG13
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin32=VP_RNG_VS_RNG
-Mcu.Pin33=VP_SYS_VS_tim6
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=34
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
+Mcu.Pin22=PG6
+Mcu.Pin23=PG7
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
+Mcu.Pin3=PF3
+Mcu.Pin30=PA14
+Mcu.Pin31=PG11
+Mcu.Pin32=PG13
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin38=VP_RNG_VS_RNG
+Mcu.Pin39=VP_SYS_VS_tim6
+Mcu.Pin4=PF5
+Mcu.Pin5=PF10
+Mcu.Pin6=PH0/OSC_IN
+Mcu.Pin7=PH1/OSC_OUT
+Mcu.Pin8=PC0
+Mcu.Pin9=PC1
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F756ZGTx
@@ -105,6 +112,10 @@ PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Signal=ETH_MDIO
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=DEBUG_EVENT_MANAGEMENT_PIN
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -141,6 +152,10 @@ PB8.Locked=true
 PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Signal=I2C1_SDA
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=DEBUG_DISPATCHER_PIN
+PC0.Locked=true
+PC0.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
@@ -155,6 +170,10 @@ PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=DEBUG_POLICE_PIN
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
 PC4.Locked=true
@@ -173,6 +192,18 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PF10.GPIOParameters=GPIO_Label
+PF10.GPIO_Label=DEBUG_CORONA_PIN
+PF10.Locked=true
+PF10.Signal=GPIO_Output
+PF3.GPIOParameters=GPIO_Label
+PF3.GPIO_Label=DEBUG_AMBULANCE_PIN
+PF3.Locked=true
+PF3.Signal=GPIO_Output
+PF5.GPIOParameters=GPIO_Label
+PF5.GPIO_Label=DEBUG_FIRE_PIN
+PF5.Locked=true
+PF5.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
